--- a/index.html
+++ b/index.html
@@ -65,25 +65,17 @@
   </style>
 </head>
 <body>
-
-
- 
-
-  
-  <div class="attribution">
-    <img class="image" src="image-qr-code.png" alt="QR">
-    <div class="content">
-      <h2>Improve your front-end skills by building projects</h2>
-      <p>  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-
+  <main>
+    <div class="attribution">
+      <img class="image" src="image-qr-code.png" alt="QR">
+      <div class="content">
+        <h2>Improve your front-end skills by building projects</h2>
+        <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      </div>
     </div>
-
-  </div>
- 
-
-
-  
+  </main>
 </body>
 </html>
+
 
  
