--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
   </style>
 </head>
 <body>
+  <h1>Page Title - Main Heading</h1>
   <main>
     <div class="attribution">
       <img class="image" src="image-qr-code.png" alt="QR">
